--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
+		         <a href="index.html">ANNIE</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -54,7 +54,6 @@
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -74,7 +73,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Juan Dela Cruz.</h1>
+	   			<h1>I'm Annie-Neshreen Ibrahim.</h1>
 
 	   			<p class="intro-position">
 	   				<span>Front-end Developer</span>
